syntax = "proto3";

package api;

import "validate/validate.proto";
import "model.proto";

option go_package = "upassed.account.v1;client";

service Teacher {
  rpc FindByUsername(TeacherFindByUsernameRequest) returns (TeacherFindByUsernameResponse);
}

message TeacherFindByUsernameRequest {
  string teacher_username = 1 [(validate.rules).string = {min_len: 4, max_len: 30}];
}

message TeacherFindByUsernameResponse {
  TeacherDTO teacher = 1;
}
